# qt_sandbox

./: .clang-format  CMakeLists.txt  README.md
animation/: CMakeLists.txt
animation/data/: asset.qrc
animation/data/src/: export.sh
animation/src/: GraphicsView.cpp  GraphicsView.hpp  Item.cpp  Item.hpp  MainWindow.cpp  MainWindow.hpp  Tile.cpp  Tile.cpp.orig  Tile.hpp  cell_item.cpp  cell_item.hpp  graphics_view.cpp  graphics_view.hpp  main.cpp  main_window.cpp  main_window.hpp  pixmap_item.cpp  pixmap_item.hpp  pkm_item.cpp  pkm_item.hpp  text_item.cpp  text_item.hpp
